extracting descriptions from images

--- a/Text_data_preparation.ipynb
+++ b/Text_data_preparation.ipynb
@@ -37,8 +37,39 @@
     }
    ],
    "source": [
-    "print(len(load_doc(\"/Users/kushalgupta/Downloads/Flickr8k_text/Flickr8k.token.txt\")))"
+    "# extract descriptions for images\n",
+    "def load_descriptions(doc):\n",
+    "    mapping = dict()\n",
+    "    for line in doc.split('\\n'):\n",
+    "        tokens = line.split()\n",
+    "        if len(line) < 2:\n",
+    "            continue\n",
+    "        image_id, image_desc = tokens[0], tokens[1:]\n",
+    "        image_id = image_id.split('.')[0]\n",
+    "        image_desc = ' '.join(image_desc)\n",
+    "        if image_id not in mapping:\n",
+    "            mapping[image_id] = list()\n",
+    "        mapping[image_id].append(image_desc)\n",
+    "    return mapping"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
