cleaning the description

--- a/Text_data_preparation.ipynb
+++ b/Text_data_preparation.ipynb
@@ -69,13 +69,40 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# cleaning the description\n",
+    "def clean_descriptions(descriptions):\n",
+    "    table = str.maketrans('', '', string.punctuation)\n",
+    "    for key, desc_list in descriptions.items():\n",
+    "        for i in range(len(desc_list)):\n",
+    "            desc = desc_list[i]\n",
+    "            desc = desc.split()\n",
+    "            # convert to lower case\n",
+    "            desc = [word.lower() for word in desc]\n",
+    "            # remove punctuation from each token\n",
+    "            desc = [w.translate(table) for w in desc]\n",
+    "            # remove hanging 's' and 'a'\n",
+    "            desc = [word for word in desc if len(word)>1]\n",
+    "            # remove tokens with numbers in them\n",
+    "            desc = [word for word in desc if word.isalpha()]\n",
+    "            # store as string\n",
+    "            desc_list[i] =  ' '.join(desc)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 2\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
