creating vocabulary list

--- a/Text_data_preparation.ipynb
+++ b/Text_data_preparation.ipynb
@@ -91,16 +91,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert the loaded descriptions into a vocabulary of words\n",
+    "def to_vocabulary(descriptions):\n",
+    "    all_desc = set()\n",
+    "    for key in descriptions.keys():\n",
+    "        [all_desc.update(d.split()) for d in descriptions[key]]\n",
+    "    return all_desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a 1\n",
-      "b 2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'ku', 'kv'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": []
