--- a/Text_data_preparation.ipynb
+++ b/Text_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3395237\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extract descriptions for images\n",
     "def load_descriptions(doc):\n",
@@ -55,20 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cleaning the description\n",
     "def clean_descriptions(descriptions):\n",
@@ -91,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,21 +86,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save descriptions to file, one per line\n",
+    "def save_descriptions(descriptions, filename):\n",
+    "    lines = list()\n",
+    "    for key, desc_list in descriptions.items():\n",
+    "        for desc in desc_list:\n",
+    "            lines.append(key + ' ' + desc)\n",
+    "    data = '\\n'.join(lines)\n",
+    "    file = open(filename, 'w')\n",
+    "    file.write(data)\n",
+    "    file.close()\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'ku', 'kv'}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded: 8092 \n",
+      "Vocabulary Size: 8763\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "filename = '/Users/kushalgupta/Downloads/Flickr8k_text/Flickr8k.token.txt'\n",
+    "# load descriptions\n",
+    "doc = load_doc(filename)\n",
+    "# parse descriptions\n",
+    "descriptions = load_descriptions(doc)\n",
+    "print('Loaded: %d ' % len(descriptions))\n",
+    "# clean descriptions\n",
+    "clean_descriptions(descriptions)\n",
+    "# summarize vocabulary\n",
+    "vocabulary = to_vocabulary(descriptions)\n",
+    "print('Vocabulary Size: %d' % len(vocabulary))\n",
+    "# save to file\n",
+    "save_descriptions(descriptions, 'descriptions.txt')"
+   ]
   }
  ],
  "metadata": {
